Fix alignment bug

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -805,7 +805,7 @@ i.success {
   font-size: 12px;
   text-align: center;
   min-width: 100px;
-  color: #000;
+  color: black;
   word-wrap: break-word;
 }
 
